# swgoh-utils-api

./: .gitignore  Cargo.toml  Dockerfile  data.json  docker-compose.yml  readme.md  sprint_time_log.md  test.sql
quick_swgoh_frontend/: index.html  package-lock.json  package.json  script.js  styles.css
src/: characters.rs  main.rs  plan.rs  roster.rs  setup.rs  types.rs
