[package]
name = "swgoh-utils-api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest={ version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde="1.0.228"
serde_json = "1.0.145"
axum="0.8.6"
tower-http = { version = "0.6.6", features = ["fs", "cors"]}
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
chrono="0.4.42"
rand = "0.8"
argon2 = "0.4"
jsonwebtoken = "9"
async-trait = "0.1"